frameworks/av: CR +2 for widevine-android
Bug: 267473659
Change-Id: Iebc18d266a58659dbc6d7b8878201a4728a1f844

--- a/project.config
+++ b/project.config
@@ -4,6 +4,7 @@
 	action = merge always
 	mergeContent = true
 [project]
-	state = active
 [access]
 	inheritFrom = Platform-Unrestricted-Projects
+[access "refs/for/*"]
+	label-Code-Review = -2..+2 group ldap/widevine-android
